--- a/packages/chain/src/environments/development/.env
+++ b/packages/chain/src/environments/development/.env
@@ -4,11 +4,11 @@ COMPOSE_PROJECT_NAME=starter-kit
 POSTGRES_PASSWORD=password
 POSTGRES_USER=admin
 POSTGRES_DB=protokit
-POSTGRES_HOST=localhost
+POSTGRES_HOST=192.168.1.5
 POSTGRES_PORT=5432
 DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB?schema=public
 
-REDIS_HOST=localhost
+REDIS_HOST=192.168.1.5
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 
@@ -22,7 +22,7 @@ PROTOKIT_GRAPHQL_PORT=8080
 PROTOKIT_GRAPHIQL_ENABLED=true
 
 # expose graphql configuration to the client app-chain
-NEXT_PUBLIC_PROTOKIT_GRAPHQL_URL=http://localhost:8080/graphql
+NEXT_PUBLIC_PROTOKIT_GRAPHQL_URL=http://192.168.1.5:8080/graphql
 
 FORCE_COLOR=3
 TS_NODE_TRANSPILE_ONLY=true
