--- a/packages/chain/src/environments/inmemory/.env
+++ b/packages/chain/src/environments/inmemory/.env
@@ -1,12 +1,12 @@
 PROTOKIT_LOG_LEVEL=INFO
 PROTOKIT_BLOCK_INTERVAL=5000
 
-PROTOKIT_GRAPHQL_HOST=localhost
+PROTOKIT_GRAPHQL_HOST=192.168.1.5
 PROTOKIT_GRAPHQL_PORT=8080
 PROTOKIT_GRAPHIQL_ENABLED=true
 
 # expose graphql configuration to the client app-chain
-NEXT_PUBLIC_PROTOKIT_GRAPHQL_URL=http://localhost:8080/graphql
+NEXT_PUBLIC_PROTOKIT_GRAPHQL_URL=http://192.168.1.5:8080/graphql
 
 FORCE_COLOR=3
 TS_NODE_TRANSPILE_ONLY=true
