--- a/packages/chain/src/environments/inmemory/.env
+++ b/packages/chain/src/environments/inmemory/.env
@@ -1,7 +1,7 @@
 PROTOKIT_LOG_LEVEL=INFO
 PROTOKIT_BLOCK_INTERVAL=5000
 
-PROTOKIT_GRAPHQL_HOST=localhost
+PROTOKIT_GRAPHQL_HOST=0.0.0.0
 PROTOKIT_GRAPHQL_PORT=8080
 PROTOKIT_GRAPHIQL_ENABLED=true
 
